--- a/views/register.html
+++ b/views/register.html
@@ -60,21 +60,21 @@
     </header>
     <div class="register">
         <form action="index.html" method="POST">
-            <label for="nombre">Nombre y Apellido:</label>
-            <input type="text" name="nombre" id="nombre">
-            <label for="usuario">Nombre de usuari@:</label>
-            <input type="text" name="usuario" id="usuario">
-            <label for="fecha-de-nac">Fecha de Nacimiento</label>
-            <input type="date" name="fecha-de-nac" id="fecha-de-nac">
-            <label for="direccion">Dirección:</label>
-            <input type="text" name="direccion" id="direccion">
-            <label for="tipo-usuario">Perfil del usuario</label>
-            <label for="comprador">Comprador</label>           
+            <label for="nombre">Nombre y Apellido:</label> <br>
+            <input type="text" name="nombre" id="nombre"> <br>
+            <label for="usuario">Nombre de usuari@:</label> <br>
+            <input type="text" name="usuario" id="usuario"> <br>
+            <label for="fecha-de-nac">Fecha de Nacimiento</label> <br>
+            <input type="date" name="fecha-de-nac" id="fecha-de-nac"> <br>
+            <label for="direccion">Dirección:</label> <br>
+            <input type="text" name="direccion" id="direccion"> <br>
+            <label for="tipo-usuario">Perfil del usuario</label><br>          
             <input type="radio" name="perfil" value="comprador" id="comprador">
-            <label for="vendedor">Vendedor</label>
+            <label class="option" for="comprador">Comprador</label>   <br>           
             <input type="radio" name="perfil" value="Vender" id="vendedor">
-            <label>Categorías de interés</label>            
-            <div class="categorias">
+            <label class="option" for="vendedor">Vendedor</label><br>
+            <label>Categorías de interés</label> <br>           
+            <div class="categorias"> 
             <input type="checkbox" name="categorias" value="Electro" id="electro">
             <label for="electro">Electro</label>
             <input type="checkbox" name="categorias" value="Moda" id="moda">
@@ -85,16 +85,17 @@
             <label for="jugueteria">Juguetería</label>
             <input type="checkbox" name="categorias" value="Vida sana" if="vida-sana">
             <label for="vida-sana">Vida sana</label>
-            </div>            
-            <label for="foto">Foto de usuario</label>
-            <input type="file" name="foto" accept=".jpg, .png"> 
-            <label for="password">Contraseña:</label>
-            <input type="password" name="password" id="password">
-            <label for="re-password">Confirmar contraseña:</label>
-            <input type="password" name="re-password" id="re-password">
-            <button type="submit">ENVIAR</button>
+            </div><br>            
+            <label for="foto">Foto de usuario</label><br>
+            <input type="file" name="foto" accept=".jpg, .png"> <br>
+            <label for="password">Contraseña:</label><br>
+            <input type="password" name="password" id="password"><br>
+            <label for="re-password">Confirmar contraseña:</label><br>
+            <input type="password" name="re-password" id="re-password"><br>
+            <div class="botones">
+            <button class="enviar" type="submit">ENVIAR</button>
             <button type="reset">CANCELAR</button>
-
+            </div>
         </form>
     </div>
 
