update de formularios

--- a/views/login.html
+++ b/views/login.html
@@ -44,8 +44,8 @@
             </div>
             <div class="login">
                 <ul>
-                    <li><a href="views\index.html">Creá tu cuenta</a><i class="far fa-id-card"></i></li>            
-                    <li><a href="views\login.html">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>                                    
+                    <li><a href="\register.html">Creá tu cuenta</a><i class="far fa-id-card"></i></li>            
+                    <li><a href="login.html">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>                               
                     <li><a href="">Mis compras</a><i class="fas fa-shopping-basket"></i></li>                                    
                 </ul>
             </div>
@@ -66,7 +66,6 @@
             <input type="password" name="password" id="password"><br>
                         <div class="botones">
             <button class="enviar" type="submit">ENVIAR</button>
-            <button type="reset">CANCELAR</button>
             </div>
         </form>
     </div>
