--- a/views/register.html
+++ b/views/register.html
@@ -44,8 +44,8 @@
             </div>
             <div class="login">
                 <ul>
-                    <li><a href="views\index.html">Creá tu cuenta</a><i class="far fa-id-card"></i></li>            
-                    <li><a href="views\login.html">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>                                    
+                    <li><a href="\register.html">Creá tu cuenta</a><i class="far fa-id-card"></i></li>            
+                    <li><a href="login.html">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>                                
                     <li><a href="">Mis compras</a><i class="fas fa-shopping-basket"></i></li>                                    
                 </ul>
             </div>
@@ -61,9 +61,9 @@
     <div class="register">
         <form action="index.html" method="POST">
             <label for="nombre">Nombre y Apellido:</label> <br>
-            <input type="text" name="nombre" id="nombre"> <br>
+            <input type="text" name="nombre" id="nombre" minlength="6" required> <br>
             <label for="usuario">Nombre de usuari@:</label> <br>
-            <input type="text" name="usuario" id="usuario"> <br>
+            <input type="text" name="usuario" id="usuario" minlength="6" required> <br>
             <label for="fecha-de-nac">Fecha de Nacimiento</label> <br>
             <input type="date" name="fecha-de-nac" id="fecha-de-nac"> <br>
             <label for="direccion">Dirección:</label> <br>
@@ -89,9 +89,9 @@
             <label for="foto">Foto de usuario</label><br>
             <input type="file" name="foto" accept=".jpg, .png"> <br>
             <label for="password">Contraseña:</label><br>
-            <input type="password" name="password" id="password"><br>
+            <input type="password" name="password" id="password" required><br>
             <label for="re-password">Confirmar contraseña:</label><br>
-            <input type="password" name="re-password" id="re-password"><br>
+            <input type="password" name="re-password" id="re-password" required><br>
             <div class="botones">
             <button class="enviar" type="submit">ENVIAR</button>
             <button type="reset">CANCELAR</button>
